Update: Import of datas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
 spring.application.name=app-auditoria
 
 server.port=8181
-
-spring.datasource.url=jdbc:h2:file:~/db-app-auditoria;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE;INIT=RUNSCRIPT FROM 'classpath:scripts/inicial.sql'
+spring.datasource.url=jdbc:h2:file:~/app-auditoria-db;INIT=RUNSCRIPT FROM 'classpath:scripts/inicial.sql'
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2
-
+spring.datasource.platform=h2
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
 
 logging.level.ROOT=INFO
 logging.level.org.springframework.cloud.config=OFF
