--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,4 @@ spring.jpa.hibernate.ddl-auto=validate
 
 logging.level.ROOT=INFO
 logging.level.org.springframework.cloud.config=OFF
+app.security.permit-requests.matchers-get=/h2/**, /swagger-ui/**, /v3/**
