--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=app-auditoria
 
 server.port=8181
-spring.datasource.url=jdbc:h2:file:~/app-auditoria-db;INIT=RUNSCRIPT FROM 'classpath:scripts/inicial.sql'
+spring.datasource.url=jdbc:h2:file:~/db-audit;INIT=RUNSCRIPT FROM 'classpath:scripts/inicial.sql'
 spring.datasource.username=sa
 spring.datasource.password=
 spring.datasource.driver-class-name=org.h2.Driver
@@ -11,6 +11,9 @@ spring.datasource.platform=h2
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.org.hibernate.envers.default_schema=auditoria
+spring.jpa.properties.org.hibernate.envers.revision_field_name=revision_id
+spring.jpa.properties.org.hibernate.envers.store_data_at_delete=delete
 
 logging.level.ROOT=INFO
 logging.level.org.springframework.cloud.config=OFF
